<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="org.volkszaehler.volkszaehlerapp.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/backup_settings"
        android:orderInCategory="150"
        android:showAsAction="never"
        android:title="@string/backup_setting"/>
    <item
        android:id="@+id/restore_settings"
        android:orderInCategory="160"
        android:showAsAction="never"
        android:title="@string/restore_setting"/>
    <item
        android:id="@+id/about"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/about"/>

</menu>
