<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/chart"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/buttonLast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/buttonLast"
            android:onClick="buttonLastHandler"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/buttonZoomOut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/buttonZoomOut"
            android:onClick="buttonZoomOutHandler" 
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/buttonDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/buttonDate"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/buttonZoomIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/buttonZoomIn"
            android:onClick="buttonZoomInHandler"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="0.15"
            android:text="@string/buttonNext"
            android:onClick="buttonNextHandler"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>