<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/From"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <DatePicker
            android:id="@+id/datePickerFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-30dp"
            android:layout_marginTop="-30dp"
            android:calendarViewShown="false"
            android:clipToPadding="false"
            android:scaleX="0.7"
            android:scaleY="0.7" />

        <TimePicker
            android:id="@+id/timePickerFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-30dp"
            android:layout_marginTop="-30dp"
            android:scaleX="0.7"
            android:scaleY="0.7" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/To"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <DatePicker
            android:id="@+id/datePickerTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-30dp"
            android:layout_marginTop="-30dp"
            android:calendarViewShown="false"
            android:clipToPadding="false"
            android:scaleX="0.7"
            android:scaleY="0.7" />

        <TimePicker
            android:id="@+id/timePickerTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-30dp"
            android:layout_marginTop="-30dp"
            android:scaleX="0.7"
            android:scaleY="0.7" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Select" />

</LinearLayout>